Minor visual edits to CSS

--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@ title: "Home"
 <header>
     <style>
         .round {
-            border-radius: 50%;
+            border-radius: 100%;
+            position: relative;
             overflow: hidden;
             width: 280px;
             height: 280px;
             margin-left: auto;
             margin-right: auto;
-        }
-        .round img {
-            display: block;
-            min-width: 100%;
-            min-height: 100%;
         }
         .round_icon {
             border-radius: 50%;
@@ -24,6 +20,9 @@ title: "Home"
         }
         table, tr, td, th{
             border: 0;
+        }
+        .content {
+
         }
     </style>
 </header>
@@ -40,7 +39,7 @@ title: "Home"
 </p>
 
 <center>
-    <table style="width:80%">
+    <table>
         <tr>
             <td style="background:transparent;" align="center"><a href="mailto:altugkarakurt@gmail.com" class="round_icon" target="_blank"><img src="images/email.png"></a></td>
             <td style="background:transparent;" align="center"><a href="http://github.com/altugkarakurt/" class="round_icon" target="_blank"><img src="images/github.png"></a></td> 
@@ -50,3 +49,4 @@ title: "Home"
         </tr>
     </table>
 </center>
+
