Updated research, index, quotes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: "Home"
 
 <p>
     <center>
-        I am Altug Karakurt, an electrical and computer engineering master's student at The Ohio State University. I am interested in <strong>Machine Learning</strong>, <strong>Communication Networks</strong> and <strong>Information Theory</strong>.
+        I am Altug Karakurt, an electrical and computer engineer at DAtAnchor.
         <br><br>You can find me at the following links:
     </center>
 </p>
