Updated pic, publications, research, home and about

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@ title: "Home"
 </header>
 
 <div class="round">
-    <img src="images/altug.jpg" />
+    <img src="images/altug2.jpg" />
 </div>
 
 <p>
     <center>
-        I am Altug Karakurt, an electrical and computer engineer at DAtAnchor.
-        <br><br>You can find me at the following links:
+        I am Altug Karakurt an electrical and computer engineer interested in machine learning, communication networks and information theory.<br><br>
+
+        I am currently a software developer at DAtAnchor, implementing data security solutions.<br><br>
+        You can find me at the following links:
     </center>
 </p>
 
