updated personal links

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@ title: "Home"
 <center>
     <table>
         <tr>
-            <td style="background:transparent;" align="center"><a href="mailto:altugkarakurt@gmail.com" class="round_icon" target="_blank"><img src="images/email.png"></a></td>
-            <td style="background:transparent;" align="center"><a href="http://github.com/altugkarakurt/" class="round_icon" target="_blank"><img src="images/github.png"></a></td> 
-            <td style="background:transparent;" align="center"><a href="https://www.linkedin.com/in/altugkarakurt/" class="round_icon" target="_blank"><img src="images/linkedin.png"></a></td>
             <td style="background:transparent;" align="center"><a href="https://scholar.google.com/citations?user=vMfCqr8AAAAJ" class="round_icon" target="_blank"><img src="images/scholar.png"></a></td>
+            <td style="background:transparent;" align="center"><a href="http://github.com/altugkarakurt/" class="round_icon" target="_blank"><img src="images/github.png"></a></td>
+            <td style="background:transparent;" align="center"><a href="https://www.kaggle.com/altugkarakurt" class="round_icon" target="_blank"><img src="images/kaggle.png"></a></td>
+            <td style="background:transparent;" align="center"><a href="https://www.linkedin.com/in/altugkarakurt/" class="round_icon" target="_blank"><img src="images/linkedin.png"></a></td>
             <td style="background:transparent;" align="center"><a href="https://twitter.com/altugkarakurt" class="round_icon" target="_blank"><img src="images/twitter.png"></a></td>
+            <td style="background:transparent;" align="center"><a href="mailto:altugkarakurt@gmail.com" class="round_icon" target="_blank"><img src="images/email.png"></a></td>
         </tr>
     </table>
 </center>
