--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@ title: "Home"
 
 <p>
     <center>
-        I am Altug Karakurt an electrical and computer engineer interested in machine learning, communication networks and information theory.<br><br>
+        I am Altug Karakurt a graduate student at University of Colorado, Boulder interested in machine learning, communication networks and information theory.<br><br>
 
-        I am currently a software developer at DAtAnchor, implementing data security solutions.<br><br>
         You can find me at the following links:
     </center>
 </p>
